# rust-micro-service

./: .env  Cargo.toml  README.md
api/: Cargo.toml
api/src/: config.rs  lib.rs  main.rs  state.rs
api/src/kafka/: mod.rs  producer.rs
api/src/routes/: event.rs  health_check.rs  mod.rs
api/src/service/: event_service.rs  mod.rs
event/: Cargo.toml  docker-compose.yml
event/src/: lib.rs  main.rs  state.rs
event/src/routes/: mod.rs
event/src/service/: event_consumer.rs  event_service.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/error/: kafka_error.rs  mod.rs
shared/src/kafka/: config.rs  consumer.rs  mod.rs  producer.rs
shared/src/model/: event.rs
