[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = "0.37.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
dotenv = "0.15"
config = "0.15.6"
