[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = "0.37.0"
futures = "0.3"
thiserror = "2.0.11"
tokio = { version = "1.0", features = ["full"] }
mongodb = "3.2.0"
